<resources>
    <string name="app_name">EatWell</string>
    <string name="Reminder">Reminder</string>
    <string name="Dashboard">Dashboard</string>
    <string name="DailyPushMsg">You can save a meal and it\'s only few minutes away. To see, Check out EatWell app.</string>
    <string name="Login">Log in</string>
    <string name="CreateNewAccount">Create new account</string>
    <string name="LoginWithFacebook">Log in with Facebook</string>
    <string name="RegisterWithFacebook">Register with Facebook</string>
    <string name="LoginWithInstagram">Log in with Instagram</string>
    <string name="BusinessLogin">Business login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="CreatePassword">Create password</string>
    <string name="Send">Send</string>
    <string name="TermsAndConditions"><u>Terms and Conditions</u></string>
    <string name="ForgotTitle">Help! I’ve lost my password…</string>
    <string name="FullName">Full Name</string>
    <string name="RepeatPassword">Confirm password</string>
    <string name="NewsletterTitle">Sign up for our newsletter</string>
    <string name="Signup">Sign up</string>
    <string name="TermAndConditionSignUp">By continuing you agree to our <u>terms &amp; conditions</u></string>
    <string name="Skip">Skip</string>
    <string name="ViewOnly">No Code - view only</string>
    <string name="ViewAppOnly">No Code - view App only</string>
    <string name="Close">Close</string>
    <string name="Verify">Verify</string>
    <string name="Code">Enter Code to activate account</string>
    <string name="Step2Title">Please enter your EatWell Code below.</string>
    <string name="Step2Title2">If you have a EatWell code, Please enter it below.</string>
    <string name="Tutorial">Tutorial</string>
    <string name="VideoDes">EatWell is an Australian market leader when it comes to targeting food waste at the retail level.We help food merchants reduce the amount of food that gets thrown away every day because it is not sold. We provide an app where merchants can post and sell the excess food at discounted prices.</string>
    <string name="VideoDes2">Please click on link to know more about us</string>
    <string name="MerchantDetail">Generating detail to merchant…</string>
    <string name="Cancel">Cancel</string>
    <string name="Continue">Continue</string>
    <string name="AcceptTitle">Accept :)</string>
    <string name="Yipee">Yipee!</string>
    <string name="Confirm">Confirm</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="OK">OK</string>
    <string name="Update">Update</string>
    <string name="FailureMessage">Something went wrong. Please try again or check your internet connection.</string>
    <string name="NetworkOffline">The Internet connection appears to be offline.</string>
    <string name="MerchantConnectionError">Merchant connection error. Payment is completed. Please contact merchant..</string>
    <string name="UpdateAvailable">New update available!</string>
    <string name="VersionMsg">New version (%1$s) of EatWell application available on play store. By Downloading the latest update you will get the latest features, improvements in application.</string>
    <string name="FacebookConnection">Facebook connection error</string>
    <string name="UpdatePriceAlert">You are about to change Cost price. Do you wish to continue ?</string>
    <string name="UpdateRetailAlert">You are about to change Retail price Cost price and Number of Portion. Do you wish to continue ? </string>
    <string name="PortionUpdated">Product detail updated successfully.</string>
    <string name="DescUpdated">Description updated successfully.</string>
    <string name="PriceUpdated">Price updated successfully.</string>
    <string name="EnterName">Please enter username</string>
    <string name="EnterEmail">Please enter valid email</string>
    <string name="ProfileUpdated">Profile updated successfully</string>
    <string name="EnterPassword">Please enter password</string>
    <string name="PasswordLimit">Password should contain at least 5 characters.</string>
    <string name="OrderCancelValidation">You cannot cancel your meal during pickup time.</string>
    <string name="PasswordMismatch">Password mismatch</string>
    <string name="EnjoyFreePortion">Enjoy your magic portion free of cost.</string>
    <string name="MaximumLimitOver">Your maximum limit to get EatWell meals is over. Please try tomorrow 😀</string>
    <string name="EnterAmount">Enter Amount</string>
    <string name="MinPortionLimit">You can get maximum %1$s EatWell portion(s).</string>
    <string name="PortionLeft">You have only %1$s quantity to be use as EatWell portion(s). Would you like to get %2$s magic portion(s)?</string>
    <string name="StaffPortionLeft">You have only %1$s quantity to be use as EatWell portion(s). Would you like to get %2$s magic portion(s)?</string>
    <string name="ShareMsg">Hi this is %1$s here, I recently just saved some food and around 50–80%2$s off meals, flowers, groceries around my area, and I wanted to share this app with you so you could save $$ and save food as well, click here to download EatWell.</string>
    <string name="ConfirmProduct">Confirmation: you are about to order %1$s portion(s).</string>
    <string name="OrderConfirmation">&#160;<![CDATA[When you press continue you also accept EatWell terms & conditions]]></string>
    <string name="ContactNumberUpdated">Mobile number updated successfully</string>
    <string name="RedeemReceipt">This will redeem the receipt. This should only be done by the restaurant. Continue ?</string>
    <string name="CancelOrderConfirmation">Do you want to cancel order ?</string>
    <string name="ValidCvv">Enter valid CVV</string>
    <string name="ValidName">Enter valid name</string>
    <string name="ValidCardNumber">Enter valid card number</string>
    <string name="ValidExpiry">Enter valid expiry date</string>
    <string name="DonationMsg">For every $1 you add EatWell can provide 2 meals to someone in need. By adding just a little extra YOU can make a huge difference in someones life. Would you like to add a little extra?</string>
    <string name="InvalidUsername">Invalid username or password</string>
    <string name="FailedRequestToken">Failed to request token</string>
    <string name="PaymentMethodTitle">How would you like to pay for your order?</string>
    <string name="NewCard">New Card</string>
    <string name="SavedCard">Saved Card</string>
    <string name="FreeFood">Free Food - Use Campaign Code</string>
    <string name="FollowUs">Follow Us</string>
    <string name="HomeTab">Home</string>
    <string name="FindFoodTab">Find Food</string>
    <string name="MapTab">Map</string>
    <string name="FavouritesTab">Favourites</string>
    <string name="ReceiptsTab">Receipts</string>
    <string name="HowToUse">How to use?</string>
    <string name="MyProfile">Profile</string>
    <string name="SettingsTab">Settings</string>
    <string name="Share">Share</string>
    <string name="ChangePassword">Change Password</string>
    <string name="FollowOnFB">Follow us on Facebook</string>
    <string name="FollowOnInstagram">Follow us on Instagram</string>
    <string name="EmailAddress">Email address</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="InviteViaFB">Invite via Facebook or Text message</string>
    <string name="Logout">Logout</string>
    <string name="Date">Date</string>
    <string name="Bought">Meals Claimed:</string>
    <string name="ID">ID: %1$d</string>
    <string name="DonatedAmount">Donated Amount :</string>
    <string name="CollectionTime">COLLECTION TIME</string>
    <string name="SlideToRedeem">Slide to redeem</string>
    <string name="SliderMsg">Slider FOR MERCHANTS USE ONLY**</string>
    <string name="PickupTime">Pickup Time :</string>
    <string name="ActiveReceipts">Active Receipts</string>
    <string name="UsedReceipts">Used Receipts</string>
    <string name="ActiveReceiptMsg">Head to the restaurant for the specified pickup time and show your receipt . If you have any questions then please don\'t hesitate to get in touch with us at EatWell</string>
    <string name="Redeemed">Redeemed</string>
    <string name="OrderCancel">Order Cancelled</string>
    <string name="WhatToExpect">What to expect:</string>
    <string name="Free">Free</string>
    <string name="SearchPlaceHolder">Search by location,store,etc.</string>
    <string name="Portions">Portions</string>
    <string name="Portion">Portion&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="Saved">Saved</string>
    <string name="Quantity">Quantity</string>
    <string name="Proceed">Proceed</string>
    <string name="SaveCardForFutureOrder">Save card for future order</string>
    <string name="PaymentMsg">We accept all Mastercard and Visa Debit and Credit cards.
        Your payment information is transmitted securely using SSL encryption technology and is stored and processed through a secure third party payment gateway in cooperation with the banks above. EatWell does not store your payment information on our server.
        Any payment information saved is only stored within your device.    \n\n\nFor any enquiries please contact our 24/7 customer support line at: 1300 848 428</string>
    <string name="OutOfStock">Out of stock</string>
    <string name="NoResults">No Record Found</string>
    <string name="left">left</string>
    <string name="TotalMeals">Total meals donated so far :&#160;</string>
    <string name="Total">Total:</string>
    <string name="Order">Order</string>
    <string name="CampaignCode">Campaign Code</string>
    <string name="CampaignCodeMsg">This meal is provided by </string>
    <string name="GetMagicPortion">Get receipt</string>
    <string name="CampaignNote">Note: -Please observe any pickup instructions.</string>
    <string name="Donation">Donation</string>
    <string name="With">with</string>
    <string name="ContinueToPayment">Continue To Payment</string>
    <string name="AmountPlaceHolder">Enter amount you would like to donate</string>
    <string name="Notifications">Notifications</string>
    <string name="UpdateTodayPortion">Update today\'s portions and price</string>
    <string name="UpdateDesc">Update Description</string>
    <string name="RegulateFixedAmount">Regulate today\'s portions from fixed amount</string>
    <string name="ReduceTodayPrice">Reduce today\'s price of product</string>
    <string name="UpdateRetailPrice">Update Retail Price of product</string>
    <string name="RetailPrice">Retail price in USD: </string>
    <string name="DailyNumberOfMeals">Daily number of EatWell meals: %1$s</string>
    <string name="FeedBackTitle">Send us your feedback!</string>
    <string name="FeedBackMsg">Do you have comments, queries or general feedback please let us know in the field below.</string>
    <string name="FeedBackDescriptionMsg">Describe your experience here...</string>
    <string name="bug">Bug</string>
    <string name="suggestion">Suggestion</string>
    <string name="other">Others</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="Subject">Subject</string>
    <string name="number_of_person_in_family">Number of people you will be ordering meals for</string>
    <string name="count">Number of people</string>
    <string name="StaffCodeBtnMsg">Restaurant Staff Code</string>
    <string name="MealPassCode">General App User Code</string>
    <string name="StaffCodeMsg">Please enter your Restaurant Staff Code below.</string>
    <string name="StaffCampaignCodeMsg">Enter assigned code to activate \n account and claim meals.</string>
</resources>