<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/referalCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_30sdp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.android.mealpass.widgets.CustomEditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/boundary_shape"
                    android:gravity="center"
                    android:fontFamily="@font/georgia"

                    android:hint="@string/Code"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingEnd="5dp"
                    android:text="@={vm.referralCode}"
                    android:textAllCaps="false"
                    android:textSize="@dimen/edit_text_size" />


                <com.android.mealpass.widgets.CustomTextView
                    android:id="@+id/referaltext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:gravity="center"
                    android:text="@string/StaffCodeMsg" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/logo_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/logo"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="1dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/varify"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/Verify"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cross"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/Close"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />




            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="20dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_cross" />


        <com.android.mealpass.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="15dp"
            android:text="@string/Skip"
            android:textColor="@android:color/white"
            android:visibility="gone" />


    </LinearLayout>


    <data>

        <variable
            name="vm"
            type="com.android.mealpass.view.dashboard.fragment.setting.viewmodel.ReferralCodeViewModel" />

    </data>
</layout>