<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/referalCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/padding"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/logo_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/logo"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="1dp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/referaltext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textStyle="bold"
                    android:text="@string/StaffCampaignCodeMsg" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/staffBtn"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:backgroundTint="@color/red"
                    android:text="@string/StaffCodeBtnMsg"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/foodbankBtn"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/MealPassCode"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/skiptBtn"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/ViewOnly"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />




            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="20dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_cross" />


        <com.android.mealpass.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="15dp"
            android:text="@string/Skip"
            android:textColor="@android:color/white"
            android:visibility="gone" />


    </LinearLayout>
</layout>