<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.android.mealpass.view.dashboard.fragment.setting.viewmodel.FeedBackViewModel" />

    </data>


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_alignParentEnd="true"
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                app:srcCompat="@drawable/ic_baseline_cancel_24" />

        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <RelativeLayout
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:background="@color/light_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.android.mealpass.widgets.CustomTextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/FeedBackTitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <com.android.mealpass.widgets.CustomTextView
                android:id="@+id/textView28"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/FeedBackMsg"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />


            <com.android.mealpass.widgets.CustomEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/boundary_shape"
                android:hint="@string/Subject"
                android:fontFamily="@font/georgia"

                android:inputType="text"
                android:maxLines="1"
                android:text="@={vm.subject}"
                android:paddingStart="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <RadioGroup
                android:visibility="gone"
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5">

                <RadioButton
                    android:id="@+id/suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="@+id/suggestion"
                    android:text="@string/suggestion"
                    android:textColor="@color/button_light_color" />

                <RadioButton
                    android:id="@+id/bug"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/bug"
                    android:textColor="@color/button_light_color" />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/other"

                    android:textColor="@color/button_light_color" />


            </RadioGroup>


            <com.android.mealpass.widgets.CustomEditText
                android:id="@+id/descriptionLabel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/editback"
                android:gravity="top"
                android:fontFamily="@font/georgia"

                android:imeOptions="actionDone"
                android:hint="@string/FeedBackDescriptionMsg"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:text="@={vm.message}"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendFeebackBtn"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="32dp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:text="@string/send_feedback"
                android:textAllCaps="false"
                android:textColor="@android:color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/descriptionLabel"
                app:layout_constraintStart_toStartOf="@+id/descriptionLabel"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>