<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/referalCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.android.eatwell.widgets.CustomEditText
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/boundary_shape"
                android:digits="0123456789"
                android:hint="@string/count"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@={vm.familyMemberCount}"
                android:textAllCaps="false"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/referaltext" />


            <com.android.eatwell.widgets.CustomTextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@color/red_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.android.eatwell.widgets.CustomTextView
                android:id="@+id/referaltext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:text="@string/number_of_person_in_family"
                app:layout_constraintEnd_toEndOf="@+id/code"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />


            <com.android.eatwell.widgets.CustomTextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/Skip"
                android:textColor="@color/red_color"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/update"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/code" />

            <com.android.eatwell.widgets.CustomTextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/Update"
                android:textColor="@color/red_color"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
                app:layout_constraintEnd_toEndOf="@+id/code"
                app:layout_constraintStart_toEndOf="@+id/cancel" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>


    <data>

        <variable
            name="vm"
            type="com.android.eatwell.view.dashboard.fragment.setting.viewmodel.ReferralCodeViewModel" />

    </data>
</layout>